# datalog_ocaml

./: datalog.opam  dune-project
src/bottom_up/: AST.ml  AST.mli  Lexer.mll  Parser.mly  bottomUp.ml  bottomUp.mli  default.ml
src/top_down/: Datalog_top_down.ml  Datalog_top_down.mli  Lexer.mll  Parser.mly
